--- a/src/main/resources/templates/weight/history.html
+++ b/src/main/resources/templates/weight/history.html
@@ -30,7 +30,7 @@
     </figure>
     <br/>
     <form th:action="@{/user/weight}" method="get">
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Add New Weight
+        <button class="btn name="Submit" type="Submit">Add New Weight
         </button>
     </form>
     <br/>
