Load last plan added

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -72,7 +72,7 @@
                     </button>
                 </form>
                 <br/>
-                <form th:action="@{/user/plan}" method="get">
+                <form th:action="@{/user/plan/load}" method="get">
                     <button class="btn" name="Submit" type="Submit">Your Last Diet Plan
                     </button>
                 </form>
