--- a/src/main/resources/templates/weight/history.html
+++ b/src/main/resources/templates/weight/history.html
@@ -14,7 +14,6 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
 </head>
 
 <body>
@@ -30,7 +29,7 @@
     </figure>
     <br/>
     <form th:action="@{/user/weight}" method="get">
-        <button class="btn name="Submit" type="Submit">Add New Weight
+        <button class="btn" name="Submit" type="Submit">Add New Weight
         </button>
     </form>
     <br/>
@@ -48,7 +47,6 @@
             </tr>
         </table>
     </div>
-
 </div>
 <script type="text/javascript" src="/js/highcharts.js"></script>
 </body>
