--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -74,7 +74,7 @@
                     </button>
                 </form>
                 <br/>
-                <form th:action="@{/user/plan/load}" method="get">
+                <form th:if="${userPlan != null}"th:action="@{/user/plan/load}" method="get">
                     <button class="btn" name="Submit" type="Submit">Your Last Diet Plan
                     </button>
                 </form>
