Problems with user-plan one-to-one relation: generating new plan and loading current plan resolved

--- a/src/main/resources/templates/plan/error.html
+++ b/src/main/resources/templates/plan/error.html
@@ -22,7 +22,7 @@
 <br/>
 
 <div class="container">
-    <h2>Sorry, we could not match any results for your preferences :( </h2>
+    <h2>Sorry, we could not match any results. It happens sometimes :( </h2>
     <h3>Please change your preferences and try again</h3>
 </div>
 </body>
