--- a/src/main/resources/templates/weight/edit.html
+++ b/src/main/resources/templates/weight/edit.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Login Form</title>
+    <title>Edit weight Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/details.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -29,7 +29,7 @@
             </label>
             <br/><br/>
             <label>Weighting date:
-                <input type="datetime-local" th:field="*{weightingDate}"/><br/>
+                <input type="datetime-local" th:value="*{weightingDate}"/><br/>
                 <label th:if="${#fields.hasErrors('weightingDate')}" th:errors="*{weightingDate}"
                        class="validation-message"></label>
             </label>
