kurento demo works

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -83,6 +83,12 @@
                     <button class="btn" name="Submit" type="Submit">New Diet Plan
                     </button>
                 </form>
+                <br>
+                <form th:action="@{/user/call}" method="get">
+                    Need professional advice? Start video call with our dietician
+                    <button class="btn" name="Submit" type="Submit">Start Video Call
+                    </button>
+                </form>
             </div>
         </div>
     </div>
