--- a/src/main/resources/templates/plan/show.html
+++ b/src/main/resources/templates/plan/show.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <title>Home Page</title>
+    <title>Diet Plan Page</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/plan.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
