Dietician's home page is /user/call

--- a/src/main/resources/templates/videoCall/call.html
+++ b/src/main/resources/templates/videoCall/call.html
@@ -36,7 +36,9 @@
     <div class="video-panel" style="margin-top:40px">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <span sec:authentication="name"></span>, now you can make a call to our dietician!
+                <span sec:authentication="name"></span>
+                <span th:if="${userName.equals('Dietician')}">, now you can accept calls from Users!</span>
+                <span th:if="${!userName.equals('Dietician')}">, now you can make a call to our dietician!</span>
             </div>
             <div class="panel-body">
                 <div class="col-md-4">
