--- a/src/main/resources/templates/videoCall/call.html
+++ b/src/main/resources/templates/videoCall/call.html
@@ -89,8 +89,30 @@
             </div>
         </div>
     </div>
-
 </div>
+<footer>
+    <div class="foot-fixed-bottom">
+        <div class="container text-center">
+            <hr/>
+            <div class="row">&copy; 2014-2015 Kurento</div>
+            <div class="row">
+                <div class="col-md-4">
+                    <a th:href="@{http://www.urjc.es}"><img th:src="@{/images/urjc.gif}"
+                                                            alt="Universidad Rey Juan Carlos" height="50px"/></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://kurento.openvidu.io/"><img th:src="@{/images/kurento.png}"
+                                                                alt="Kurento" height="50px"/></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="http://www.naevatec.com"><img th:src="@{/images/naevatec.png}"
+                                                           alt="Naevatec" height="50px"/></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
 
