--- a/src/main/resources/templates/userDetails/edit.html
+++ b/src/main/resources/templates/userDetails/edit.html
@@ -32,7 +32,7 @@
         </label>
         <br/><br/>
         <label>Date of birth:
-            <input type="date" th:field="*{dateOfBirth}"/><br/>
+            <input type="date" th:value="${userDetails.dateOfBirth}" th:name="dateOfBirth"/><br/>
             <label th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"
             class="validation-message"></label>
         </label>
