--- a/src/main/resources/templates/weight/history.html
+++ b/src/main/resources/templates/weight/history.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/details.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet"
-          href="https://code.highcharts.com/css/highcharts.css" />
+          href="https://code.highcharts.com/css/highcharts.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -24,26 +24,33 @@
 <div class="container">
     <h3 class="form-signin-heading">Weight history</h3>
     <br/>
-    <figure class="highcharts-figure">
-        <div id="container-bar"></div>
-    </figure>
+    <div id="container" style="width:100%; height:400px;">
+        <figure class="highcharts-figure">
+            <div id="container-bar"></div>
+        </figure>
+    </div>
     <br/>
     <form th:action="@{/user/weight}" method="get">
         <button class="btn" name="Submit" type="Submit">Add New Weight
         </button>
     </form>
     <br/>
-    <div>Full history:
-        <table>
+    <div>
+        <h4>Full history:</h4>
+        <br/>
+        <table class="table" style="width: 50%">
             <tr>
-                <th>Weight </th>
+                <th>Weight</th>
                 <th>Date</th>
+                <th></th>
+                <th></th>
             </tr>
             <tr th:each="weight : ${latestWeightsDesc}">
                 <td th:text="${weight.weight}"></td>
-                <td th:text="${weight.weightingDate}"></td>
-                <td><a th:href="@{/user/weight/edit(id=${weight.id})}">Edit </a></td>
-                <td><a th:href="@{/user/weight/delete(id=${weight.id})}" onclick="return confirm('Are you sure?')">Remove</a></td>
+                <td th:text="${#temporals.format(weight.weightingDate, 'dd-MM-yyyy HH:mm')}"></td>
+                <td><a th:href="@{/user/weight/edit(id=${weight.id})}">Edit</a></td>
+                <td><a th:href="@{/user/weight/delete(id=${weight.id})}" onclick="return confirm('Are you sure?')">Remove</a>
+                </td>
             </tr>
         </table>
     </div>
