--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,3 +1,8 @@
+.panel-primary {
+    max-width: 780px;
+    margin: auto;
+}
+
 .admin-message-text {
     font-style: normal;
     font-size: 22px;
