--- a/src/main/resources/templates/videoCall/call.html
+++ b/src/main/resources/templates/videoCall/call.html
@@ -28,10 +28,10 @@
 </head>
 
 <body>
-<form th:if="${!userName.equals('Dietician')}" th:action="@{/user/home}" method="get">
+<form th:if="${!userName.equals('Dietitian')}" th:action="@{/user/home}" method="get">
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
 </form>
-<form th:if="${userName.equals('Dietician')}" th:action="@{/logout}" method="get">
+<form th:if="${userName.equals('Dietitian')}" th:action="@{/logout}" method="get">
     <button class="btn btn-md btn-danger btn-block" name="registration" type="Submit">Logout
     </button>
 </form>
@@ -41,8 +41,8 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <span sec:authentication="name"></span>
-                <span th:if="${userName.equals('Dietician')}">, now you can accept calls from Users!</span>
-                <span th:if="${!userName.equals('Dietician')}">, now you can make a call to our dietician!</span>
+                <span th:if="${userName.equals('Dietitian')}">, now you can accept calls from Users!</span>
+                <span th:if="${!userName.equals('Dietitian')}">, now you can make a call to our dietician!</span>
             </div>
             <div class="panel-body">
                 <div class="col-md-4">
@@ -60,7 +60,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <input id="peer" name="peer" class="form-control" type="hidden" th:value="Dietician">
+                            <input id="peer" name="peer" class="form-control" type="hidden" th:value="Dietitian">
                         </div>
                         <div class="col-md-6 text-right">
                             <a id="call" href="#" class="btn btn-success"><span
