add Dtos in templates

--- a/src/main/resources/templates/userDetails/add.html
+++ b/src/main/resources/templates/userDetails/add.html
@@ -17,10 +17,10 @@
 <br/>
 
 <div class="container">
-    <form th:action="@{/user/details/add}" method="post" class="form-signin" th:object="${userDetails}">
+    <form th:action="@{/user/details/add}" method="post" class="form-signin" th:object="${userDetailsDto}">
         <h3 class="form-signin-heading">Add User Details</h3>
         <label>Gender:
-            <div th:each="gender: ${genders}">
+            <div th:each="gender: ${gendersDto}">
                 <input type="radio" th:field="*{gender}" th:value="${gender.id}">
                 <label th:text="${gender.name}"></label>
             </div>
@@ -40,7 +40,7 @@
                    class="validation-message"></label>
         </label>
         <br/><br/>
-        <div th:object="${latestWeight}">
+        <div th:object="${latestWeightDto}">
             <label>Current weight (kg):
                 <input type="hidden" th:field="*{weightingDate}">
                 <input type="number" th:field="*{weight}" min="0" max="200" step="0.1"/><br/>
@@ -58,7 +58,7 @@
         <label>Activity Level:
             <div>
                 <select th:field="*{activityLevel}">
-                    <option th:each="level : ${activityLevels}"
+                    <option th:each="level : ${activityLevelsDto}"
                             th:text="${level.name + ' - ' + level.description}"
                             th:value="${level.id}">
                 </select>
@@ -69,7 +69,7 @@
             <div>
                 <select th:field="*{cuisineType}">
                     <option th:value="0">no preference
-                    <option th:each="type : ${cuisineTypes}"
+                    <option th:each="type : ${cuisineTypesDto}"
                             th:text="${type.name}"
                             th:value="${type.id}">
                 </select>
@@ -79,7 +79,7 @@
         <label>Health and allergies (multiple choice):
             <div>
                 <select th:field="*{healths}" multiple="multiple" size="10">
-                    <option th:each="health : ${healths}"
+                    <option th:each="health : ${healthsDto}"
                             th:text="${health.name}"
                             th:value="${health.id}">
                 </select>
@@ -89,7 +89,7 @@
         <label>Diets (multiple choice):
             <div>
                 <select th:field="*{diets}" multiple="multiple" size="4">
-                    <option th:each="diet : ${diets}"
+                    <option th:each="diet : ${dietsDto}"
                             th:text="${diet.name}"
                             th:value="${diet.id}">
                 </select>
