--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <br/>
-                <div>You will achieve your dream weight on <b th:text="${successDate}"></b></div>
+                <div><b th:text="${successDate}"></b></div>
                 <br/>
                 <div class="row">
                     <div class="col-md-5">
