update LatestWeightService and LatestWeightRepository: findFirstByUserOrderByIdDesc() changed to findFirstByUserOrderByWeightingDateDesc()

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -43,7 +43,7 @@
                 <br/>
                 <div class="row">
                     <div class="col-md-5">
-                        <div>Your latest weight: <b th:text="${latestWeight.weight}"></b> kg</div>
+                        <div>Your recent weight: <b th:text="${latestWeight.weight}"></b> kg</div>
                         <div>Your dream weight: <b th:text="${userDetails.dreamWeight}"></b> kg</div>
                         <div>Your activity level: <b th:text="${userDetails.activityLevel.name}"></b></div>
                     </div>
